[metadata]
name = radtext
# Versions should comply with PEP440.  For a discussion on single-sourcing
# the version across setup.py and the project code, see
# https://packaging.python.org/en/latest/single_source_version.html
version = 1.0.dev1
# Author details
author = Yifan Peng
author_email = yip4002@med.cornell.edu
description = RadText is a high-performance Python Radiology Text Analysis System.
long_description = file: README.md
long_description_content_type = text/markdown
# The project's main homepage.
url = https://github.com/bionlplab/radtext'
license = MIT License
keywords = radioloy-report, text-mining, NLP
# See https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Text Processing
    Topic :: Software Development
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis

[options]
python_requires = >=3.6
packages = find:
install_requires =
    bioc
    bllipparser==2016.9.11
    docopt
    intervaltree==3.1.0
    JPype1==0.6.3
    medspacy==0.2.0.0
    networkx==2.4
    nltk==3.6.5
    numpy==1.17.3
    pandas==1.0.5
    ply==3.11
    PyStanfordDependencies==0.3.1
    PyYAML==5.4
    spacy==3.1.4
    stanza==1.3.0
    tqdm

[options.packages.find]
exclude =
    tests.*
    tests

[options.package_data]
* =
    resources/*
    resources/*/*
    pphilter/*
    pphilter/*/*
    pphilter/*/*/*

[options.extras_require]
rest = docutils>=0.15.2

[options.entry_points]
console_scripts =
    radtext-download = radtext.cmd.download_models:main
    radtext-csv2bioc = radtext.cmd.csv2bioc:main
    radtext-deid = radtext.cmd.deidentify:main
    radtext-ssplit = radtext.cmd.ssplit:main
