[metadata]
name = radtext
# Versions should comply with PEP440.  For a discussion on single-sourcing
# the version across setup.py and the project code, see
# https://packaging.python.org/en/latest/single_source_version.html
version = 1.0.dev3
# Author details
author = Yifan Peng
author_email = yip4002@med.cornell.edu
description = RadText is a high-performance Python Radiology Text Analysis System.
long_description = file: README.md
long_description_content_type = text/markdown
# The project's main homepage.
url = https://github.com/bionlplab/radtext'
license = MIT License
keywords = radioloy-report, text-mining, NLP
# See https://pypi.org/classifiers/
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Text Processing
    Topic :: Software Development
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis

[options]
python_requires = >=3.6, <3.9
packages = find:
install_requires =
    bioc
    bllipparser
    docopt
    Cython
    intervaltree
    JPype1==0.6.3
    medspacy
    networkx
    nltk
    numpy
    pandas
    ply
    PyStanfordDependencies
    PyYAML
    spacy
    stanza
    tqdm
    xlrd
    cachetools
    openpyxl

[options.packages.find]
exclude =
    tests.*
    tests

[options.package_data]
* =
    resources/*
    resources/*/*
    pphilter/*
    pphilter/*/*
    pphilter/*/*/*

[options.extras_require]
rest = docutils>=0.15.2

[options.entry_points]
console_scripts =
    radtext-download = radtext.cmd.download:main
    radtext-csv2bioc = radtext.cmd.csv2bioc:main
    radtext-cdm2bioc = radtext.cmd.cdm2bioc:main
    radtext-bioc2cdm = radtext.cmd.bioc2cdm:main
    radtext-deid = radtext.cmd.deid:main
    radtext-secsplit = radtext.cmd.split_section:main
    radtext-preprocess = radtext.cmd.preprocess:main
    radtext-ssplit = radtext.cmd.ssplit:main
    radtext-parse = radtext.cmd.parse:main
    radtext-tree2dep = radtext.cmd.tree2dep:main
    radtext-ner = radtext.cmd.ner:main
    radtext-neg = radtext.cmd.ner:main
